--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+<% layout('layouts/boilerplate') -%>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-  </body>
-</html>
+    <div id="map"></div>
+    <script>
+      mapboxgl.accessToken = "<%= mapBoxToken %>";
+      var posts = {features: <%- JSON.stringify(posts) %>} ;
+    </script>
+    <script src="/javascripts/allPostsClusterMap.js"></script>
+
