--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,5 +1,11 @@
+<% layout('layouts/boilerplate') -%>
 <h1>Posts Index!</h1>
-<% posts.forEach(function(post){ %>
+<div id="map"></div>
+ 
+<%-  include ("../partials/paginatePosts") %>
+
+
+<% posts.docs.forEach(function(post){ %>
     <div>
         <h2><%= post.title %></h2>
     <div> Price: <%= post.price %></div>
@@ -8,3 +14,11 @@
     <div><a href ="/posts/<%= post.id %>">View More</a></div>
     </div>
 <% }); %>
+
+
+<%- include ( "../partials/paginatePosts") %>
+<script>
+    mapboxgl.accessToken = "<%=mapBoxToken%>";
+    var posts = {features: <%- JSON.stringify(posts.docs) %>} ;
+  </script>
+  <script src="/javascripts/allPostsClusterMap.js"></script>
