--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -1,20 +1,14 @@
 <% layout('layouts/boilerplate') -%>
 <h1>New Posts!</h1>
 <form action="/posts" method="POST" enctype="multipart/form-data">
-<div><input type="text" name="post[title]" placeholder="Title"></div>
-<div><input type="number" name="post[price]" step=".01" placeholder="Price"></div>
-<div>
-    <input type="file" accept="images/*" name="images" multiple>
-</div>
-<textarea name="post[description]"  placeholder="Description"></textarea>
-<div><input type="text" name="post[location]" placeholder="Location"></div>
-<div><input type="submit"></div>
+    <div><input type="text" name="post[title]" placeholder="Title"></div>
+    <div><input type="number" name="post[price]" step=".01" placeholder="Price"></div>
+    <div><input type="number" name="post[length]" placeholder="Length"></div> <!-- Added length field -->
+    <div><input type="number" name="post[width]" placeholder="Width"></div>   <!-- Added width field -->
+    <div>
+        <input type="file" accept="images/*" name="images" multiple>
+    </div>
+    <textarea name="post[description]" placeholder="Description"></textarea>
+    <div><input type="text" name="post[location]" placeholder="Location"></div>
+    <div><input type="submit"></div>
 </form>
-
-<!--
-    title: String,
-price: String,
-description: String,
-location: String,
-
--->
