--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -8,7 +8,7 @@
 <% posts.docs.forEach(function(post){ %>
     <div>
         <h2><%= post.title %></h2>
-    <div> Price: <%= post.price %></div>
+    <div> Price: $<%= post.price %></div>
     <div><%= post.description %></div>
     <div><%= post.location %></div>
     <div><a href ="/posts/<%= post.id %>">View More</a></div>
