--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,24 +1,55 @@
 <% layout('layouts/boilerplate') -%>
-<h1>Posts Index!</h1>
-<div id="map"></div>
- 
-<%-  include ("../partials/paginatePosts") %>
+<style>
+    .container {
+        display: flex;
+    }
 
+    .search-bar {
+        width: 33%;
+        padding: 10px;
+    }
+
+    #map {
+        width: 67%;
+        height: 400px; /* Adjust height as needed */
+    }
+</style>
+
+<h1>Posts Index!</h1>
+
+<div class="container">
+    <div class="search-bar">
+    <form action="/posts" method="GET">
+	<input type="text" name="search" placeholder="Search" value="<%= search %>">
+	<input type="number" name="minPrice" placeholder="Min Price" value="<%= minPrice %>">
+	<input type="number" name="maxPrice" placeholder="Max Price" value="<%= maxPrice %>">
+	<input type="number" name="minRating" placeholder="Min Rating" value="<%= minRating %>">
+	<input type="number" name="maxRating" placeholder="Max Rating" value="<%= maxRating %>">
+	<button type="submit">Filter</button>
+</form>
+    </div>
+
+    <div id="map"></div>
+</div>
+
+<%- include ("../partials/paginatePosts") %>
 
 <% posts.docs.forEach(function(post){ %>
     <div>
         <h2><%= post.title %></h2>
-    <div> Price: $<%= post.price %></div>
-    <div><%= post.description %></div>
-    <div><%= post.location %></div>
-    <div><a href ="/posts/<%= post.id %>">View More</a></div>
+        <div>Price: $<%= post.price %></div>
+        <div><%= post.description %></div>
+        <div><%= post.location %></div>
+        <div><%= post.length %>in</div>
+        <div><%= post.width %>in</div>
+        <div><a href="/posts/<%= post.id %>">View More</a></div>
     </div>
 <% }); %>
 
+<%- include ("../partials/paginatePosts") %>
 
-<%- include ( "../partials/paginatePosts") %>
 <script>
     mapboxgl.accessToken = "<%=mapBoxToken%>";
-    var posts = {features: <%- JSON.stringify(posts.docs) %>} ;
-  </script>
-  <script src="/javascripts/allPostsClusterMap.js"></script>
+    var posts = {features: <%- JSON.stringify(posts.docs) %>};
+</script>
+<script src="/javascripts/allPostsClusterMap.js"></script>
