--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,49 @@
 <% layout('layouts/boilerplate') -%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #fff; /* Light cyan background */
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 50px;
+            color: #000;
+        }
+
+        p {
+            text-align: center;
+            color: #000;
+        }
+
+        #map {
+            width: calc(100% - 100px);
+            height: 500px;
+            margin: 50px auto;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <div id="map"></div>
+
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script>
-      mapboxgl.accessToken = "<%= mapBoxToken %>";
-      var posts = {features: <%- JSON.stringify(posts) %>} ;
+        mapboxgl.accessToken = "<%= mapBoxToken %>";
+        var posts = {features: <%- JSON.stringify(posts) %>};
     </script>
     <script src="/javascripts/allPostsClusterMap.js"></script>
-
+</body>
+</html>
