--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,80 @@
 <% layout('layouts/boilerplate'); -%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #ffffff; /* Light cyan background */
+            color: #333;
+        }
+
+        label {
+            font-weight: bold;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+       
+
+        input[type="text"],
+        input[type="password"],
+        input[type="number"],
+        input[type="file"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #000000;
+            border-radius: 4px;
+            font-size: 16px;
+            background-color: #fff; /* Light blue */
+            box-sizing: border-box;
+        }
+
+        input[type="text"]:focus,
+        input[type="password"]:focus,
+        input[type="text"]:focus{
+            outline: none;
+            border-color: #000000; /* Blue */
+        }
+
+        input[type="submit"] {
+            padding: 10px 20px;
+            background-color: #000000; /* Orange red */
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            box-sizing: border-box;
+            margin-top: 20px;
+        }
+
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 50px;
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <h1>User Login</h1>
 <form action="/login" method="POST" >
     <div>
         <label for="username">Username:</label>
@@ -12,8 +88,12 @@
 <input type="submit">
 
 </form>
-<div>
-	<a href="/forgot-password">Forgot password?</a>
+<div style="text-align: center; margin-top: 20px;">
+    <a href="/forgot-password" style="text-decoration: none; color: #666666; font-size: 14px; transition: color 0.3s ease;">Forgot your password?</a>
 </div>
+
+
+</body>
+</html>
 
     
