--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,26 +1,93 @@
-<style>
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-    } 
-    li {
-        display: inline;
-        padding: 5px;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background-color: #fff; /* Light cyan background */
+        }
 
-    }
-</style>
-<ul id="navbar">
-    <li><a href="/"> Home</a></li>
-    <li><a href="/posts">Posts</a></li>
-    <% if(!currentUser){ %>
-        <li><a href="/register"> Register</a></li>
-        <li><a href="/login">Login</a></li>
-     <% } else {%>
-        <li><a href="/posts/new"> New Posts</a></li>
-        <li><a href="/profile"> Profile</a></li>
-        <li><a href="/logout"> Logout</a></li>
-        Welcome, <%= currentUser.username %> !
-     <% }%>   
+        ul#navbar {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
 
-</ul>
+        ul#navbar li {
+            display: inline;
+            padding: 15px 20px;
+        }
+
+        ul#navbar li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 700;
+            text-transform: uppercase;
+            transition: color 0.3s ease, background-color 0.3s ease;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+
+        ul#navbar li a:hover {
+            color: #000000; /* Tomato red */
+            background-color: #fff;
+        }
+
+        ul#navbar li a.active {
+            color: #000000; /* Tomato red */
+            background-color: #fff;
+        }
+
+        ul#navbar li:last-child {
+            color: #000000;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+
+        @media (max-width: 768px) {
+            ul#navbar {
+                flex-direction: column;
+            }
+
+            ul#navbar li {
+                padding: 10px 0;
+                text-align: center;
+                width: 100%;
+                height: 10vh;
+            }
+
+            ul#navbar li a {
+                display: block;
+                width: 100%;
+                height: 10vh;
+            }
+        }
+    </style>
+</head>
+<body>
+    <ul id="navbar">
+        <li><a href="/"> Home</a></li>
+        <li><a href="/posts">Products</a></li>
+        <% if(!currentUser){ %>
+            <li><a href="/register"> Register</a></li>
+            <li><a href="/login">Login</a></li>
+        <% } else {%>
+            <li><a href="/posts/new">Create Products</a></li>
+            <li><a href="/profile"> Profile</a></li>
+            <li><a href="/logout"> Logout</a></li>
+            <li>Welcome, <%= currentUser.username %> !</li>
+        <% }%>   
+    </ul>
+</body>
+</html>
