--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -83,7 +83,7 @@
             <li><a href="/register"> Register</a></li>
             <li><a href="/login">Login</a></li>
         <% } else {%>
-            <li><a href="/posts/new">Create Products</a></li>
+            <li><a href="/posts/new">Add Products</a></li>
             <li><a href="/profile"> Profile</a></li>
             <li><a href="/logout"> Logout</a></li>
             <li>Welcome, <%= currentUser.username %> !</li>
