--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,43 @@ height: 500px;
 .color-red {
 color: red;
 }
+.message {
+  position: fixed;
+  bottom: 20px; /* Adjust as needed */
+  right: 20px; /* Adjust as needed */
+  z-index: 9999;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+
+.message-success {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
+
+.message-error {
+  background-color: #f44336; /* Red */
+  color: white;
+}
+
+.icon {
+  margin-right: 10px;
+  font-size: 24px;
+}
+
+.icon.success {
+  background-color: white;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.icon.error {
+  color: white;
+}
+
 
 .profile-image {
 	width: 100px;
