--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,199 +1,323 @@
 <% layout('layouts/boilerplate') -%>
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #ffffff; /* Light cyan background */
-            color: #000000;
-        }
+      body {
+        font-family: "Roboto", sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        background-color: #ffffff;
+        color: #000000;
+      }
 
-        h1, h2 {
-            font-family: 'Lora', serif;
-            color: #000000;
-             text-align: center;
-        }
+      h1,
+      h2 {
+        font-family: "Roboto", serif;
+        color: #000000;
+        text-align: center;
+      }
 
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-        }
+      .container {
+        display: flex;
+        flex-wrap: nowrap;
+        padding: 20px;
+      }
 
-        .search-bar {
-            width: 100%;
-            max-width: 400px;
-            padding: 10px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 40px;
-        }
+      .menu-bar {
+        width: 20%;
+        padding: 20px;
+        box-sizing: border-box;
+        display: none; /* Initially hidden */
+        background-color: #f4f4f4;
+      }
 
-        .filter {
-            margin-bottom: 20px;
-        }
+      .menu-bar.active {
+        display: block;
+      }
 
-        .filter input {
-            width: calc(100% - 20px);
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-            background-color: #fff; /* Light blue */
-            margin-right: 10px;
-            display: inline-block;
-            box-sizing: border-box;
-        }
+      .map-container {
+        width: 100%; /* Full width when the menu is not active */
+        padding: 20px;
+        box-sizing: border-box;
+      }
 
-        .filter button {
-            padding: 10px 20px;
-            background-color:#000000; /* Orange red */
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            display: inline-block;
-            box-sizing: border-box;
-        }
+      .map-container.active {
+        width: 80%; /* Adjust width when the menu is active */
+      }
 
-        .filter button:hover {
-            background-color: #000000; /* Coral red */
-        }
+      .toggle-btn {
+        padding: 10px;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        font-size: 24px;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+        border-radius: 50%; /* Make it circular */
+      }
 
-        #map {
-            width: calc(100% - 40px);
-            height: 400px; /* Adjust height as needed */
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border: 2px solid #000000; /* Tomato red border */
-            background-color: #000000; /* Light periwinkle blue */
-            margin-bottom: 40px;
-        }
+      .toggle-btn::after {
+        content: "Show Filters";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: -30px;
+        font-size: 14px;
+        font-family: "Roboto", sans-serif; /* Match the font family */
+        opacity: 0;
+        transition: opacity 0.3s;
+      }
 
-        .post {
-            width: calc(50% - 40px);
-            padding: 20px;
-            margin: 0 20px 20px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-sizing: border-box;
-        }
+      .toggle-btn:hover::after {
+        opacity: 1;
+      }
 
-        .post:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-        }
+      .toggle-btn:hover {
+        background-color: rgba(
+          0,
+          0,
+          0,
+          0.1
+        ); /* Change the background color on hover */
+        transform: scale(1.1); /* Increase size on hover */
+      }
 
-        .post h2 {
-            margin-top: 0;
-            color: #000000; /* Orange red */
-        }
+      .toggle-btn.active::after {
+        content: "Hide Filters";
+      }
 
-        .post div {
-            margin-bottom: 10px;
-        }
+      .search-bar {
+        width: 100%;
+        padding: 10px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 40px;
+      }
 
-        .post a {
-            color: #000000;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
+      .filter {
+        margin-bottom: 20px;
+      }
 
-        .post a:hover {
-            color: #000000;
-            text-decoration: underline;
-        }
+      .filter input {
+        width: calc(100% - 20px);
+        padding: 10px;
+        margin-top: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 16px;
+        background-color: #fff;
+        margin-right: 10px;
+        display: inline-block;
+        box-sizing: border-box;
+      }
 
-        .paginate {
-            display: flex;
-            justify-content: center;
-            margin: 20px 0;
-        }
+      .filter button {
+        padding: 10px 20px;
+        background-color: #000000;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+        display: inline-block;
+        box-sizing: border-box;
+      }
 
-        .paginate a {
-            margin: 0 5px;
-            padding: 10px 15px;
-            border: 1px solid #000000;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 4px;
-            background-color: #000000;
-        }
+      .filter button:hover {
+        background-color: #333333;
+      }
 
-        .paginate a:hover {
-            background-color: #000000;
-            color: #fff;
-        }
+      #map {
+        width: 100%;
+        height: 400px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border: 2px solid #000000;
+        background-color: #000000;
+        margin-bottom: 40px;
+      }
+
+      .post-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      .post {
+        width: calc(50% - 40px);
+        padding: 20px;
+        margin: 0 20px 20px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-sizing: border-box;
+      }
+
+      .post:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      }
+
+      .post h2 {
+        margin-top: 0;
+        color: #000000;
+      }
+
+      .post div {
+        margin-bottom: 10px;
+      }
+
+      .post a {
+        color: #000000;
+        text-decoration: none;
+        transition: color 0.3s ease;
+      }
+
+      .post a:hover {
+        color: #000000;
+        text-decoration: underline;
+      }
+
+      .paginate {
+        display: flex;
+        justify-content: center;
+        margin: 20px 0;
+      }
+
+      .paginate a {
+        margin: 0 5px;
+        padding: 10px 15px;
+        border: 1px solid #000000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 4px;
+        background-color: #000000;
+      }
+
+      .paginate a:hover {
+        background-color: #000000;
+        color: #fff;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Products</h1>
+    <button class="toggle-btn" onclick="toggleMenu()">
+      &#9776;
+      <!-- Hamburger menu icon -->
+    </button>
 
     <div class="container">
+      <div class="menu-bar" id="menuBar">
         <div class="search-bar">
-            <form action="/posts" method="GET">
-                <h1>Product Search</h1>
-                <div class="filter filter-1">
-                    <input type="text" name="search" placeholder="Search" value="<%= search %>">
-                </div>
-                <div class="filter filter-2">
-                    <input type="number" name="minPrice" placeholder="Min Price" value="<%= minPrice %>">
-                </div>
-                <div class="filter filter-3">
-                    <input type="number" name="maxPrice" placeholder="Max Price" value="<%= maxPrice %>">
-                </div>
-                <div class="filter filter-4">
-                    <input type="number" name="minRating" placeholder="Min Rating" value="<%= minRating %>">
-                </div>
-                <div class="filter filter-5">
-                    <input type="number" name="maxRating" placeholder="Max Rating" value="<%= maxRating %>">
-                </div>
-                <div class="filter filter-6">
-                    <button type="submit">Filter</button>
-                </div>
-            </form>
+          <form action="/posts" method="GET">
+            <h1>Product Search</h1>
+            <div class="filter filter-1">
+              <input
+                type="text"
+                name="search"
+                placeholder="Search"
+                value="<%= search %>"
+              />
+            </div>
+            <div class="filter filter-2">
+              <input
+                type="number"
+                name="minPrice"
+                placeholder="Min Price"
+                value="<%= minPrice %>"
+              />
+            </div>
+            <div class="filter filter-3">
+              <input
+                type="number"
+                name="maxPrice"
+                placeholder="Max Price"
+                value="<%= maxPrice %>"
+              />
+            </div>
+            <div class="filter filter-4">
+              <input
+                type="number"
+                name="minRating"
+                placeholder="Min Rating"
+                value="<%= minRating %>"
+              />
+            </div>
+            <div class="filter filter-5">
+              <input
+                type="number"
+                name="maxRating"
+                placeholder="Max Rating"
+                value="<%= maxRating %>"
+              />
+            </div>
+            <div class="filter filter-6">
+              <button type="submit">Filter</button>
+            </div>
+          </form>
         </div>
+      </div>
 
+      <div class="map-container" id="mapContainer">
         <div id="map"></div>
 
-        <% posts.docs.forEach(function(post){ %>
-            <div class="post">
-                <h2><%= post.title %></h2>
-                <div>Price: $<%= post.price %></div>
-                <div><%= post.description %></div>
-                <div>Location: <%= post.location %></div>
-                <div>Dimensions: <%= post.length %>in x <%= post.width %>in</div>
-                <div><a href="/posts/<%= post.id %>">View More</a></div>
-            </div>
-        <% }); %>
-
-        <div class="paginate">
-            <%- include ("../partials/paginatePosts") %>
+        <div class="post-container">
+          <% posts.docs.forEach(function(post){ %>
+          <div class="post">
+            <h2><%= post.title %></h2>
+            <div>Price: $<%= post.price %></div>
+            <div><%= post.description %></div>
+            <div>Location: <%= post.location %></div>
+            <div>Dimensions: <%= post.length %>in x <%= post.width %>in</div>
+            <div><a href="/posts/<%= post.id %>">View More</a></div>
+          </div>
+          <% }); %>
         </div>
+
+        <div class="paginate"><%- include ("../partials/paginatePosts") %></div>
+      </div>
     </div>
 
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js"></script>
     <script>
-        mapboxgl.accessToken = "<%=mapBoxToken%>";
-        var posts = {features: <%- JSON.stringify(posts.docs) %>};
+      mapboxgl.accessToken = "<%=mapBoxToken%>";
+      var posts = {features: <%- JSON.stringify(posts.docs) %>};
     </script>
     <script src="/javascripts/allPostsClusterMap.js"></script>
-</body>
+    <script>
+      function toggleMenu() {
+        const menuBar = document.getElementById("menuBar");
+        const mapContainer = document.getElementById("mapContainer");
+        const toggleBtn = document.querySelector(".toggle-btn");
+        if (menuBar.classList.contains("active")) {
+          menuBar.classList.remove("active");
+          mapContainer.classList.remove("active");
+          toggleBtn.classList.remove("active");
+        } else {
+          menuBar.classList.add("active");
+          mapContainer.classList.add("active");
+          toggleBtn.classList.add("active");
+        }
+      }
+    </script>
+  </body>
 </html>
