--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -16,8 +16,8 @@
     }
 
     h1, h2, h3 {
-        font-family: 'Lora', serif;
-        color: #ff6347; /* Tomato red */
+        font-family: 'Roboto', serif;
+        color: #000; /* Tomato red */
     }
 
     h1 {
@@ -33,7 +33,7 @@
         background-color: #fff;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border: 2px solid #ff6347; /* Tomato red border */
+        border: 2px solid #0000; /* Tomato red border */
     }
 
     .post-details div {
@@ -60,7 +60,7 @@
     .images img {
         width: 200px;
         border-radius: 10px;
-        border: 2px solid #ff6347; /* Tomato red border */
+        border: 2px solid #000000; /* Tomato red border */
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
@@ -69,7 +69,7 @@
         height: 400px; /* Adjust height as needed */
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border: 2px solid #ff6347; /* Tomato red border */
+        border: 2px solid #000000; /* Tomato red border */
         margin-bottom: 20px;
     }
 
@@ -77,7 +77,7 @@
         display: inline-block;
         padding: 10px 20px;
         color: #fff;
-        background-color: #ff4500; /* Orange red */
+        background-color: #000; /* Orange red */
         border: none;
         border-radius: 5px;
         text-align: center;
@@ -87,7 +87,7 @@
     }
 
     .btn:hover {
-        background-color: #e63946; /* Coral red */
+        background-color: #000000; /* Coral red */
     }
 
     .btn-edit {
@@ -100,7 +100,7 @@
         background-color: #fff;
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        border: 2px solid #ff6347; /* Tomato red border */
+        border: 2px solid #000000; /* Tomato red border */
     }
 
     .review-form textarea, .edit-review-form textarea {
@@ -115,8 +115,8 @@
     .review-form input[type="submit"], .edit-review-form input[type="submit"] {
         width: 100%;
         padding: 10px;
-        background-color: #ff4500; /* Orange red */
-        color: #fff;
+        background-color: #fff; /* Orange red */
+        color: #000000;
         border: none;
         border-radius: 5px;
         cursor: pointer;
@@ -126,7 +126,7 @@
     }
 
     .review-form input[type="submit"]:hover, .edit-review-form input[type="submit"]:hover {
-        background-color: #e63946; /* Coral red */
+        background-color: #fff; /* Coral red */
     }
 
     .reviews {
